# cmc-callagent

./: .dockerignore  .env.example  .gitignore  AWS_SETUP.md  Dockerfile  deploy.sh  docker-compose.yml  main.py  pyproject.toml  task-definition.json  test_db.py  test_db_logic.py  test_stt_opus.py  trilingual_agent_prompt.md
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/js/: app.js  bookings.js  complaints.js  conversations.js  settings.js  tester.js
nginx/: nginx.conf
scratch/: list_models.py  test_complaint.py  test_genai_aio.py  test_genai_aio_stream.py  test_history.py  test_live.py  verify_imports.py
scripts/: check_audio.py  entrypoint.sh  fix_stuck_calls.py  generate_greeting.py  interact.py  server_setup.sh  voice_talk.py
src/: dashboard_api.py  db.py  language.py  live_handler.py  llm.py  pipeline.py  server.py  session_store.py  stt.py  tts.py  vad.py
tests/: test_auto_tool_flow.py  test_dashboard.py  test_language_flow.py
