[project]
name = "sinhala-agent"
version = "0.1.0"
description = "Trilingual (Sinhala/Tamil/English) call agent powered by Gemini 2.5 Flash + Google STT/TTS + Twilio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "twilio>=9.0.0",
    "google-genai>=1.0.0",
    "google-cloud-speech>=2.26.0",
    "google-cloud-texttospeech>=2.16.0",
    "python-dotenv>=1.0.0",
    "httpx[http2]>=0.27.0",
    "python-multipart>=0.0.9",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "gtts>=2.5.4",
    "aiosqlite>=0.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "gunicorn>=22.0.0",
    "dateparser>=1.2.0",
    "pytz>=2024.1",
    "webrtcvad-wheels>=2.0.10",   # VAD: Google WebRTC VAD — pre-built wheels, no C compiler needed
    "pyngrok>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyrefly]
search_path = ["."]
python_interpreter = ".venv/bin/python"
